--- a/package.json
+++ b/package.json
@@ -5,30 +5,18 @@
   "private": true,
   "license": "GPL v2.0",
   "scripts": {
-    "build": "npm run build:types && npm run build:ts && npm run build:extension",
-    "clean": "npm run clean:ts && npm run build:types",
-    "build:types": "npm run clean:types",
-    "clean:types": "rm -rf ./@types",
-    "build:ts": "npm run clean:ts && rollup -c",
-    "clean:ts": "rm -rf ./dist || true",
-    "build:extension": "npm run build:schema",
+    "build": "npm run clean && rollup -c && npm run build:schema",
+    "clean": "rm -rf ./dist",
     "build:schema": "npm run clean:schema && glib-compile-schemas ./resources/schemas --targetdir=./dist/schemas/",
     "clean:schema": "rm -rf ./dist/schemas/*.compiled",
     "build:package": "npm run build && rm -rf './dist/modernwindowmanager@ferrarodomenico.com.zip' && cd ./dist && zip -qr 'modernwindowmanager@ferrarodomenico.com.zip' .",
     "watch": "npm run build && npx rollup -c --watch",
-    "lint": "eslint --ext .ts src/",
-    "install": "npm run install:extension",
     "install:extension": "mkdir -p ~/.local/share/gnome-shell/extensions/modernwindowmanager@ferrarodomenico.com && cp ./dist/* ~/.local/share/gnome-shell/extensions/modernwindowmanager@ferrarodomenico.com/ -r",
     "wayland-session": "dbus-run-session -- gnome-shell --nested --wayland",
-    "dev:wayland": "npm run build && npm run install && npm run wayland-session"
+    "dev:wayland": "npm run build && npm run install:extension && npm run wayland-session"
   },
   "devDependencies": {
-    "@gi.ts/cli": "^1.3.0",
-    "@gi.ts/lib": "^1.3.0",
-    "@gi.ts/parser": "^1.2.0",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.4",
+    "typescript": "^4.7.4",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
@@ -41,10 +29,10 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-visualizer": "^5.8.0",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.4",
     "sass": "^1.71.1",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
     "@gi-types/clutter10": "^10.0.1",
     "@gi-types/gio2": "^2.72.1",
     "@gi-types/glib2": "^2.72.1",
