--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
     "dev:wayland": "npm run build && npm run install:extension && npm run wayland-session"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
+    "@gi-types/adw1": "^1.1.1",
+    "@gi-types/clutter10": "^10.0.1",
+    "@gi-types/gio2": "^2.72.1",
+    "@gi-types/glib2": "^2.72.1",
+    "@gi-types/gobject2": "^2.72.1",
+    "@gi-types/gtk4": "^4.6.1",
+    "@gi-types/meta10": "^10.0.1",
+    "@gi-types/shell0": "^0.1.1",
+    "@gi-types/st1": "^1.0.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
@@ -29,17 +40,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-visualizer": "^5.8.0",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.4",
     "sass": "^1.71.1",
-    "@gi-types/clutter10": "^10.0.1",
-    "@gi-types/gio2": "^2.72.1",
-    "@gi-types/glib2": "^2.72.1",
-    "@gi-types/gobject2": "^2.72.1",
-    "@gi-types/gtk4": "^4.6.1",
-    "@gi-types/meta10": "^10.0.1",
-    "@gi-types/shell0": "^0.1.1",
-    "@gi-types/st1": "^1.0.1"
+    "typescript": "^4.7.4"
   }
 }
