--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "moduleResolution": "Node",
     "experimentalDecorators": true,
     "paths": {
+      "@gnome-shell/*": ["./src/gnome-shell-types/*"],
       "@/*": ["./src/*"]
     }
   },
