--- a/package.json
+++ b/package.json
@@ -1,46 +1,29 @@
 {
   "name": "modernwindowmanager",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "author": "Domenico Ferraro <ferraro.domenico125@gmail.com>",
   "private": true,
   "license": "GPL v2.0",
   "scripts": {
-    "build": "npm run clean && rollup -c && npm run build:schema",
-    "clean": "rm -rf ./dist",
-    "build:schema": "npm run clean:schema && glib-compile-schemas ./resources/schemas --targetdir=./dist/schemas/",
-    "clean:schema": "rm -rf ./dist/schemas/*.compiled",
-    "build:package": "npm run build && rm -rf './dist/modernwindowmanager@ferrarodomenico.com.zip' && cd ./dist && zip -qr 'modernwindowmanager@ferrarodomenico.com.zip' .",
-    "watch": "npm run build && npx rollup -c --watch",
-    "install:extension": "mkdir -p ~/.local/share/gnome-shell/extensions/modernwindowmanager@ferrarodomenico.com && cp ./dist/* ~/.local/share/gnome-shell/extensions/modernwindowmanager@ferrarodomenico.com/ -r",
+    "build": "npm run clean && node esbuild.mjs && npm run build:schema",
+    "clean": "rm -rf dist; rm -rf dist_legacy",
+    "build:schema": "npm run clean:schema && glib-compile-schemas ./resources/schemas --targetdir=./dist/schemas/ && cp ./dist/schemas/ ./dist_legacy/ -r",
+    "clean:schema": "rm -rf ./dist/schemas/*.compiled; rm -rf ./dist_legacy/schemas/*.compiled",
+    "build:package": "rm -rf './dist/modernwindowmanager@ferrarodomenico.com.zip'; rm -rf './dist_legacy/modernwindowmanager@ferrarodomenico.com.zip'; npm run build && cd ./dist && zip -qr 'modernwindowmanager@ferrarodomenico.com.zip' . && cd ../dist_legacy && zip -qr 'modernwindowmanager@ferrarodomenico.com.zip' .",
+    "install:extension": "mkdir -p ~/.local/share/gnome-shell/extensions/modernwindowmanager@ferrarodomenico.com && cp ./dist$([ $(gnome-shell --version | grep -o -E '[0-9]+' | head -n 1) -le 44 ] && echo '_legacy')/* ~/.local/share/gnome-shell/extensions/modernwindowmanager@ferrarodomenico.com/ -r",
     "wayland-session": "dbus-run-session -- gnome-shell --nested --wayland",
     "dev:wayland": "npm run build && npm run install:extension && npm run wayland-session"
   },
   "devDependencies": {
-    "@gi-types/adw1": "^1.1.1",
-    "@gi-types/clutter10": "^10.0.1",
-    "@gi-types/gio2": "^2.72.1",
-    "@gi-types/glib2": "^2.72.1",
-    "@gi-types/gobject2": "^2.72.1",
-    "@gi-types/gtk4": "^4.6.1",
-    "@gi-types/meta10": "^10.0.1",
-    "@gi-types/shell0": "^0.1.1",
-    "@gi-types/st1": "^1.0.1",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@rollup/plugin-typescript": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "eslint": "^8.22.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "esbuild": "^0.20.2",
+    "esbuild-sass-plugin": "^3.2.0",
+    "eslint": "^9.1.0",
+    "glob": "^10.3.12",
     "prettier": "^2.7.1",
-    "rollup": "^2.78.1",
-    "rollup-plugin-cleanup": "^3.2.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.8.0",
-    "sass": "^1.71.1",
-    "typescript": "^4.7.4"
+    "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@girs/gjs": "^3.3.0",
+    "@girs/gnome-shell": "^46.0.0-beta6"
   }
 }
