Add preferences button to the popup menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "ambient.d.ts",
     "src/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "resolveJsonModule": true
 }
