--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "tilingshell",
-  "version": "13.0",
+  "version": "14",
   "author": "Domenico Ferraro <ferraro.domenico125@gmail.com>",
   "private": true,
   "license": "GPL v2.0",
   "scripts": {
     "build": "npm run clean && node esbuild.mjs && npm run build:schema",
     "clean": "rm -rf dist; rm -rf dist_legacy",
+    "update-translations": "npm run create:translations && npm run merge:translations && npm run build:translations",
     "build:schema": "npm run clean:schema && glib-compile-schemas ./resources/schemas --targetdir=./dist/schemas/ && cp ./dist/schemas/ ./dist_legacy/ -r",
     "clean:schema": "rm -rf ./dist/schemas/*.compiled; rm -rf ./dist_legacy/schemas/*.compiled",
     "build:package": "npm run clean:package; npm run build && cd ./dist && zip -qr ../tilingshell@ferrarodomenico.com.zip * && cd ../dist_legacy && zip -qr ../GNOME.42-44.tilingshell@ferrarodomenico.com.zip *",
@@ -14,6 +15,9 @@
     "install:extension": "mkdir -p ~/.local/share/gnome-shell/extensions/tilingshell@ferrarodomenico.com && cp ./dist$([ $(gnome-shell --version | grep -o -E '[0-9]+' | head -n 1) -le 44 ] && echo '_legacy')/* ~/.local/share/gnome-shell/extensions/tilingshell@ferrarodomenico.com/ -r",
     "wayland-session": "dbus-run-session -- gnome-shell --nested --wayland",
     "dev:wayland": "npm run build && npm run install:extension && npm run wayland-session",
+    "build:translations": "for file in $(ls translations/*.po); do mkdir -p resources/locale/$(basename $file .po)/LC_MESSAGES; msgfmt -c $file -o resources/locale/$(basename $file .po)/LC_MESSAGES/tilingshell.mo; done",
+    "create:translations": "xgettext --from-code=UTF-8 --output=translations/tilingshell@ferrarodomenico.com.pot -j --language=javascript --force-po dist/prefs.js dist/extension.js",
+    "merge:translations": "for file in $(ls translations/*.po); do msgmerge -U $file translations/tilingshell@ferrarodomenico.com.pot --backup=none; done",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --check \"**/*.{ts,scss}\"",
