--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "paths": {
       "@*": ["./src/*"]
     },
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
   },
   "include": [
     "ambient.d.ts",
