feat: use GNOME 48 dependencies

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "typescript-eslint": "^7.15.0"
   },
   "dependencies": {
-    "@girs/gjs": "^3.3.0",
-    "@girs/gnome-shell": "^46.0.0-beta6"
+    "@girs/gnome-shell": "^48.0.2"
   }
 }
